<resources>
    <string name="dummy">#</string>
    <string name="app_name">SimpleRunTracker</string>
    <string name="distance">Distance</string>
    <string name="zero_distance">0.0 km</string>
    <string name="time">Time</string>
    <string name="zero_time">0 s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="overview">Overview</string>
    <string name="runs">Runs</string>
</resources>