<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/panel_info" />

    <GridLayout
        android:id="@+id/panel_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_start_stop"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="?colorPrimaryVariant" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:padding="10dp"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/text_traveled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:text="@string/zero_distance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:padding="10dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:padding="10dp"
            android:text="@string/zero_time" />

    </GridLayout>

    <Button android:id="@+id/button_start_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/start" />

</RelativeLayout>